* 0.1-alpha
  * Forked PHPTracker v0.3 and renamed it to StealThisTracker
  * Added PHP 5.3+ Namespacing and PSR-4 autoloading
  * Applied PEAR coding standards
  * Removed config and added fluent setters
  * Added webseeds, private flag and DHT nodes to Torrent
  * Added basic IPv6 support
* 0.1.1-alpha
  * Added scrape function
  * Ignore announce for torrents the tracker doesn't manage
* 0.1.2-alpha
  * Added 'created by' attribute to Torrent
  * Added default piece length of 256 kB to Torrent
  * Correction for proper 'downloaded' count in scrape response
* 0.1.3-alpha
  * Added 'created by' attribute to persistence
  * Code optimizations